--- a/mainapp/templates/mainapp/create.html
+++ b/mainapp/templates/mainapp/create.html
@@ -1,16 +1,18 @@
-{%extends "mainapp/base.html" %}
+{% extends 'mainapp/base.html' %}
+{% block title %}
+Create New List
+{% endblock %}
 
-{%block title%} Create form {%endblock%} 
-
-{%block content%}  Create form 
-
-<form action="/create/" method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" name="save">
-        save
-    </button>
-
-
-</form>
-{%endblock%}
+{% block content %}
+	<h3>Create a New To Do List</h3>
+	<br>
+	<form method="post", action="/create/" class="form-group">
+		{% csrf_token %}
+		<div class="input-group mb-3">
+	  		<div class="input-group-prepend">
+	  		<button name="save", type="submit", class="btn btn-success">Create</button>
+	  		</div>
+	  		{{form.name}}
+		</div>
+	</form>
+{% endblock %}
