--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -1,3 +1,9 @@
+{% extends 'mainapp/base.html' %}
+{% block title %}
+Home
+{% endblock %}
 
-    
-    
+
+{% block content %}
+<h3>Home Page</h3>
+{% endblock %}
